--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,6 @@
   box-sizing: border-box;
 }
 body {
-  background: var(--tg-theme-bg-color);
-  color: var(--tg-theme-text-color);
+  background: #474A51;
+  color: white;
 }
