--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,7 +1,7 @@
 .button {
     padding: 10px 15px;
-    background: var(--tg-theme-button-color);
-    color: var(--tg-theme-text-color);
+    background: #00A86B;
+    color: white;
     border: none;
     outline: none;
     cursor: pointer;
