--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -1,7 +1,8 @@
 .product {
     display: flex;
     flex-direction: column;
-    border: 1px solid var(--tg-theme-button-color);
+    border:  #00A86B;;
+    border-radius: 10px;
     padding: 15px;
     width: 170px;
 }
@@ -11,7 +12,7 @@
     background: lightgray;
     height: 100px;
     margin: 0 auto;
-    background: var(-tg-theme-button-color);
+    background:  #00A86B;;
 }
 
 .description {
