--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -3,6 +3,7 @@
     background: #00A86B;
     color: white;
     border: none;
+    border-radius: 15px;
     outline: none;
     cursor: pointer;
 }
