--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -1,24 +1,46 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
 .product {
     display: flex;
     flex-direction: column;
     border:  #00A86B;;
-    border-radius: 10px;
     padding: 15px;
     width: 170px;
+    background: #495057;
+    border-radius: 10px;
+    box-shadow: -5px 5px 5px #393635;
+    object-fit: fill;
+
 }
 
 .img {
-    width: 100%;
-    background: lightgray;
+    width: 170px;
     height: 100px;
+    background: #00A86B;
     margin: 0 auto;
-    background:  #00A86B;;
+    position: relative;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 10px 10px 0 0;
+
+}
+
+.title {
+    font-size: 1em;
+    margin-bottom: 10px;
 }
 
 .description {
     font-size: 0.8em;
+    opacity: 0.5;
+    margin-bottom: 15px;
+
 }
 
 .add-btn {
     width: 100%;
+    font-size: 1.05em;
 }
